// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Responses spec examples > 200 with schema > generates array response type for list endpoints 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Pet = { id: number; name: string; };

export type GetPetsResponse = Pet[];"
`;

exports[`Responses spec examples > 200 with schema > generates success response type with typed schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type User = { id: string; name: string; email?: string; };

export type GetUsersUserIdResponse = User;"
`;

exports[`Responses spec examples > 200 with schema > generates success response type with typed schema 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetUsersUserIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getUsersByUserId: decorateWithErrors<(userId: string) => Promise<GetUsersUserIdResponse>, never>(
      async (userId: string): Promise<GetUsersUserIdResponse> => {
        try {
          const result = await requester<GetUsersUserIdResponse>("GET", \`/users/\${encodeURIComponent(userId)}\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Responses spec examples > 204 No Content > uses void for 204 responses 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    deleteCache: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("DELETE", \`/cache\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Responses spec examples > default response > default response alongside explicit error codes keeps explicit errors only 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type GetTasksResponse = void;

export type GetTasksError401 = unknown;

export type GetTasksDefaultError = unknown;

export type GetTasksErrors = ApiError<401, GetTasksError401>;"
`;

exports[`Responses spec examples > default response > does not generate typed error for default response 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type GetPingResponse = void;

export type GetPingDefaultError = unknown;"
`;

exports[`Responses spec examples > default response > does not generate typed error for default response 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError, DefaultApiError } from './contracts.js';
import type { GetPingDefaultError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new DefaultApiError(result.status, result.data as GetPingDefaultError, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Responses spec examples > multiple status codes > generates success type + error types for 200, 400, 404 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type Order = { id: string; total: number; };

export type ValidationError = { field: string; message: string; };

export type NotFoundError = { resource: string; };

export type GetOrdersOrderIdResponse = Order;

export type GetOrdersOrderIdError400 = ValidationError;

export type GetOrdersOrderIdError404 = NotFoundError;

export type GetOrdersOrderIdErrors = ApiError<400, GetOrdersOrderIdError400> | ApiError<404, GetOrdersOrderIdError404>;"
`;

exports[`Responses spec examples > multiple status codes > generates success type + error types for 200, 400, 404 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetOrdersOrderIdError400, GetOrdersOrderIdError404, GetOrdersOrderIdErrors, GetOrdersOrderIdResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getOrdersByOrderId: decorateWithErrors<(orderId: string) => Promise<GetOrdersOrderIdResponse>, GetOrdersOrderIdErrors>(
      async (orderId: string): Promise<GetOrdersOrderIdResponse> => {
        try {
          const result = await requester<GetOrdersOrderIdResponse>("GET", \`/orders/\${encodeURIComponent(orderId)}\`, {});
          if (result instanceof ErrorResponse) {
            if (result.status === 400) throw new ApiError(400, result.data as GetOrdersOrderIdError400, result.message ?? \`Request failed with status 400\`);
            if (result.status === 404) throw new ApiError(404, result.data as GetOrdersOrderIdError404, result.message ?? \`Request failed with status 404\`);
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [400, 404] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Responses spec examples > multiple success status codes > unions multiple 2xx response schemas 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type AsyncTask = { taskId: string; status: string; };

export type PostJobsBody = { command: string; };

export type PostJobsResponse = AsyncTask | AsyncTask;"
`;

exports[`Responses spec examples > response with headers > generates response type even when headers are present 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  streamResponse,
  ErrorResponse,
  errorResponse,
} from 'genoc/runtime';

export type GetDownloadResponse = { url: string; };"
`;
